plugins {
	id 'java'
	id 'org.springframework.boot' version '3.5.5'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'apps.backend'
version = '0.0.1-SNAPSHOT'
description = ' AIL-ways platform backend service'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	dependencies {
		// --- Core ---
		implementation 'org.springframework.boot:spring-boot-starter-web'
		implementation 'org.springframework.boot:spring-boot-starter-security'
		implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
		implementation 'org.springframework.boot:spring-boot-starter-validation'

		// --- MongoDB ---
		implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'

		// --- Mail (Mailtrap 등) ---
		implementation 'org.springframework.boot:spring-boot-starter-mail'

		// --- (선택) Thymeleaf: 서버 템플릿을 쓸 때만 필요 ---
		implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'

		// --- Lombok ---
		compileOnly 'org.projectlombok:lombok'
		annotationProcessor 'org.projectlombok:lombok'

		// --- Test ---
		testImplementation 'org.springframework.boot:spring-boot-starter-test'
		testImplementation 'org.springframework.security:spring-security-test'
		testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

        implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
        runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
        runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'

		// --- Swagger ---
		implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.7.0'

        // ---WebFlux ---
        implementation 'org.springframework.boot:spring-boot-starter-webflux'

        //--Redis---
        implementation 'org.springframework.boot:spring-boot-starter-data-redis'

    }
}

tasks.named('test') {
	useJUnitPlatform()
}
